# leafconf

./: .gitlab-ci.yml  CMakeLists.txt  README.md  leafconfConfig.cmake.in  poppy-manifest.toml
.gitlab/: build-astra.yml  build-windows.yml
include/leafconf/: proxy.h  serialization.h  static.h
include/leafconf/serializers/: toml.h
src/c++/: dummy.c++
src/c++/serializers/: toml.h
tests/: CMakeLists.txt  test-main.c++
